# atom

./: .commans  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  workflow_runs.yml
crates/book/: book.toml
src/: atom.rs  element.rs  error.rs  isotope.rs  isotopes.rs  lib.rs  periodic_table.rs  standard_atomic_weight.rs  table.rs  uncertain.rs
tests/: elements.rs  isotopes.rs
