[package]
edition = "2021"
name = "atom"
version = "0.0.3"

[dependencies]
derive_more = { version = "1.0.0-beta.6", dafault-features = false, features = [
    "from",
] }
serde = { version = "1.0.193", features = ["derive"], optional = true }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.50"
indexmap = "2.1.0"

[features]
default = ["nist"]
nist = []
iupac = []
