[package]
edition = "2021"
name = "atom"
version = "0.0.4"

[dependencies]
derive_more = { version = "2.0.1", default-features = false, features = [
    "from",
] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
indexmap = "2.12.0"

[features]
default = ["nist"]
nist = []
iupac = []
